--- a/app/src/main/res/layout/grid_item_layout.xml
+++ b/app/src/main/res/layout/grid_item_layout.xml
@@ -1,24 +1,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:layout_marginTop="5dp"
-              android:orientation="vertical"
-              android:padding="5dp">
+              android:orientation="vertical">
 
     <ImageView
         android:id="@+id/grid_item_image"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:scaleType="centerCrop"/>
-
-    <TextView
-        android:id="@+id/grid_item_title"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:ellipsize="marquee"
-        android:gravity="center"
-        android:maxLines="2"
-        android:textSize="12sp"/>
 
 </LinearLayout>
