--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,12 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="MyAppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorPrimary">@android:color/black</item>
+        <item name="colorPrimaryDark">#191919</item>
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
     <!-- Settings activity theme. -->
     <style name="SettingsTheme" parent="AppTheme">
     </style>
