--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -8,7 +8,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:paddingBottom="16dp">
 
@@ -19,6 +19,7 @@
             android:layout_gravity="center_vertical"
             android:background="#008675"
             android:paddingLeft="20dp"
+            android:paddingStart="20dp"
             android:textColor="@color/colorText"
             android:textSize="@dimen/text_size"
             tools:text="@string/movie_title"/>
@@ -37,6 +38,7 @@
                 android:contentDescription="@string/movie_image"
                 android:hint="@string/movie_image"
                 android:paddingLeft="50dp"
+                android:paddingStart="50dp"
                 android:scaleType="centerCrop"/>
 
             <TextView
@@ -48,6 +50,7 @@
                 android:hint="@string/movie_vote_average"
                 android:paddingBottom="32dp"
                 android:paddingLeft="20dp"
+                android:paddingStart="20dp"
                 tools:text="User Rating"/>
 
             <TextView
@@ -59,6 +62,7 @@
                 android:layout_toRightOf="@id/image"
                 android:hint="@string/movie_release_date"
                 android:paddingLeft="20dp"
+                android:paddingStart="20dp"
                 tools:text="Release Date"/>
 
         </RelativeLayout>
@@ -78,46 +82,44 @@
             android:layout_width="wrap_content"
             android:layout_height="1dp"
             android:background="@android:color/darker_gray"
-            android:paddingLeft="60dp"/>
+            android:paddingLeft="60dp"
+            android:paddingStart="60dp"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="20dp"
+            android:paddingStart="20dp"
             android:paddingTop="5dp"
+            android:paddingBottom="5dp"
             android:text="@string/trailers_label"/>
 
         <LinearLayout
+            android:id="@+id/trailer_area"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:clickable="true"
+            android:paddingLeft="20dp">
 
-            <Button
+            <ImageButton
                 android:id="@+id/start_video_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:layout_marginLeft="32dp"
-                android:paddingBottom="8dp"
-                android:text="@string/play_video"/>
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/trailer_recycler_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-            </android.support.v7.widget.RecyclerView>
+                android:src="@android:drawable/ic_media_play"
+                android:background="@android:color/white"/>
 
             <TextView
-                android:id="@+id/trailer_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:text="Trailer 1"/>
-
-            <VideoView
-                android:id="@+id/youtube_view"
+                android:id="@+id/trailer_text_view"
+                android:paddingLeft="8dp"
+                android:paddingStart="8dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:text="@string/no_trailers_avail"
+                tools:text="Trailer One">
+
+            </TextView>
 
         </LinearLayout>
 
