--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -1,134 +1,162 @@
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <data>
+        <variable
+            name="viewModel"
+            type="com.ssowens.android.popularmovies.MovieItem" />
+    </data>
+
+    <ScrollView
+        android:id="@+id/scroll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingBottom="16dp">
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/movie_title_text_view"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_gravity="center_vertical"
-            android:background="#008675"
-            android:paddingLeft="20dp"
-            android:paddingStart="20dp"
-            android:textColor="@color/colorText"
-            android:textSize="@dimen/text_size"
-            tools:text="@string/movie_title"/>
-
-        <RelativeLayout
+        <LinearLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingTop="10dp">
-
-            <ImageView
-                android:id="@+id/image"
-                android:layout_width="200dp"
-                android:layout_height="250dp"
-                android:layout_alignParentLeft="true"
-                android:contentDescription="@string/movie_image"
-                android:hint="@string/movie_image"
-                android:paddingLeft="50dp"
-                android:paddingStart="50dp"
-                android:scaleType="centerCrop"/>
+            android:paddingBottom="16dp">
 
             <TextView
-                android:id="@+id/movie_vote_average_text_view"
+                android:id="@+id/movie_title_text_view"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@id/image"
-                android:hint="@string/movie_vote_average"
-                android:paddingBottom="32dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center_vertical"
+                android:background="#008675"
                 android:paddingLeft="20dp"
                 android:paddingStart="20dp"
-                tools:text="User Rating"/>
+                android:textColor="@color/colorText"
+                android:textSize="@dimen/text_size"
+                tools:text="@string/movie_title"/>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingLeft="20dp"
+                android:paddingTop="10dp">
+
+                <ImageView
+                    android:id="@+id/image"
+                    android:layout_width="100dp"
+                    android:layout_height="200dp"
+                    android:layout_alignParentLeft="true"
+                    android:contentDescription="@string/movie_image"
+                    android:hint="@string/movie_image"
+                    app:bind.imageUrl="@{viewModel.imageUrl}"
+                    android:scaleType="centerCrop"/>
+
+                <TextView
+                    android:id="@+id/movie_vote_average_text_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="50dp"
+                    android:layout_toRightOf="@id/image"
+                    android:hint="@string/movie_vote_average"
+                    android:paddingLeft="20dp"
+                    android:paddingStart="20dp"
+                    android:paddingBottom="10dp"
+                    tools:text="User Rating"/>
+
+                <TextView
+                    android:id="@+id/movie_release_date_text_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/movie_vote_average_text_view"
+                    android:layout_toRightOf="@id/image"
+                    android:hint="@string/movie_release_date"
+                    android:paddingBottom="10dp"
+                    android:layout_marginLeft="20dp"
+                    tools:text="Release Date"/>
+
+                <TextView
+                    android:id="@+id/movie_favorite"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/movie_release_date_text_view"
+                    android:layout_toRightOf="@id/image"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="20dp"
+                    android:background="#008675"
+                    android:text="@string/mark_as_favorite"
+                    tools:text="Mark As Favorite"/>
+
+            </RelativeLayout>
 
             <TextView
-                android:id="@+id/movie_release_date_text_view"
+                android:id="@+id/movie_overview_text_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/movie_vote_average_text_view"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@id/image"
-                android:hint="@string/movie_release_date"
+                android:hint="@string/movie_overview"
+                android:paddingBottom="10dp"
                 android:paddingLeft="20dp"
-                android:paddingStart="20dp"
-                tools:text="Release Date"/>
+                android:paddingRight="20dp"
+                android:paddingTop="10dp"
+                tools:text="@string/movie_overview"/>
 
-        </RelativeLayout>
-
-        <TextView
-            android:id="@+id/movie_overview_text_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/movie_overview"
-            android:paddingBottom="10dp"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
-            android:paddingTop="10dp"
-            tools:text="@string/movie_overview"/>
-
-        <View
-            android:layout_width="wrap_content"
-            android:layout_height="1dp"
-            android:background="@android:color/darker_gray"
-            android:paddingLeft="60dp"
-            android:paddingStart="60dp"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="20dp"
-            android:paddingStart="20dp"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
-            android:text="@string/trailers_label"/>
-
-        <LinearLayout
-            android:id="@+id/trailer_area"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:clickable="true"
-            android:paddingLeft="20dp">
-
-            <ImageButton
-                android:id="@+id/start_video_button"
+            <View
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:src="@android:drawable/ic_media_play"
-                android:background="@android:color/white"/>
+                android:layout_height="1dp"
+                android:background="@android:color/darker_gray"
+                android:paddingLeft="60dp"
+                android:paddingStart="60dp"/>
 
             <TextView
-                android:id="@+id/trailer_text_view"
-                android:paddingLeft="8dp"
-                android:paddingStart="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/no_trailers_avail"
-                tools:text="Trailer One">
+                android:paddingBottom="5dp"
+                android:paddingLeft="20dp"
+                android:paddingStart="20dp"
+                android:paddingTop="5dp"
+                android:text="@string/trailers_label"/>
 
-            </TextView>
+            <LinearLayout
+                android:id="@+id/trailer_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/trailer_area"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:orientation="horizontal"
+                android:paddingLeft="20dp">
+
+                <ImageButton
+                    android:id="@+id/start_video_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:background="@android:color/white"
+                    android:src="@android:drawable/ic_media_play"/>
+
+                <TextView
+                    android:id="@+id/trailer_text_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="8dp"
+                    android:paddingStart="8dp"
+                    android:text="@string/no_trailers_avail"
+                    tools:text="Trailer One">
+
+                </TextView>
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="1dp"
+                android:background="@android:color/darker_gray"/>
 
         </LinearLayout>
 
-        <View
-            android:layout_width="wrap_content"
-            android:layout_height="1dp"
-            android:background="@android:color/darker_gray"/>
+    </ScrollView>
 
-    </LinearLayout>
-
-</ScrollView>
-
+</layout>
