--- a/app/src/main/res/layout/list_item_trailer.xml
+++ b/app/src/main/res/layout/list_item_trailer.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <linearlayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
+              android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:padding="8dp">
 
     <ImageButton
         android:id="@+id/play_button"
-        android:src="@android:drawable/ic_media_play"
+        android:background="@android:color/holo_green_dark"
         android:scaleType="center"
-        tools:text="play_button"
-        android:background="@android:color/holo_green_dark"/>
+        android:src="@android:drawable/ic_media_play"
+        tools:text="play_button"/>
 
     <TextView
         android:id="@+id/trailer_title"
