--- a/app/src/main/res/layout/list_item_trailer.xml
+++ b/app/src/main/res/layout/list_item_trailer.xml
@@ -3,21 +3,22 @@
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
-              android:padding="8dp">
+              android:paddingStart="20dp"
+              android:paddingLeft="20dp">
 
     <ImageButton
         android:id="@+id/play_button"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:background="@android:color/holo_green_dark"
-        android:scaleType="center"
-        android:src="@android:drawable/ic_media_play"
+        android:background="@color/white"
+        android:src="@drawable/ic_play_arrow_24dp"
         tools:text="play_button"/>
 
     <TextView
         android:id="@+id/trailer_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
         tools:text="Trailer 1"/>
 
 </LinearLayout>
