--- a/app/src/main/res/layout/list_item_review.xml
+++ b/app/src/main/res/layout/list_item_review.xml
@@ -8,7 +8,6 @@
               android:paddingLeft="20dp"
               android:paddingStart="20dp">
 
-
     <TextView
         android:id="@+id/review_content"
         android:layout_width="wrap_content"
@@ -17,16 +16,10 @@
         tools:text="Review content"/>
 
     <TextView
-        android:id="@+id/full_review"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="Full Review"/>
-
-    <TextView
         android:id="@+id/reviewUrl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@android:color/holo_blue_dark"
+        android:textColorLink="@android:color/holo_blue_dark"
         tools:text="www.google.com"/>
 
     <TextView
