--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -17,7 +17,8 @@
         android:gravity="center"
         android:numColumns="2"
         android:stretchMode="columnWidth"
-        android:verticalSpacing="1dp"/>
+        android:verticalSpacing="0dp"
+        android:horizontalSpacing="0dp"/>
 
     <ProgressBar
         android:id="@+id/progressBar"
